Revise index.html for improved content and layout
Updated the content and structure of the index.html file to enhance clarity and user engagement. Changes include rephrasing sections, improving service descriptions, and adjusting the layout for better readability.

--- a/index.html
+++ b/index.html
@@ -3,71 +3,113 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Delta Tech AI | IT Training, Services & Resource Outsourcing</title>
+  <title>Delta Tech AI | Corporate IT Training & Services</title>
 
-  <meta name="description" content="Delta Tech AI provides corporate IT training, IT services, tech debt resolution, and outsourcing of trained resources." />
+  <meta name="description" content="Delta Tech AI provides corporate IT training, IT services, tech debt resolution, and trained resource outsourcing." />
 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- HERO -->
   <header class="hero">
-    <h1>Delta Tech AI</h1>
-    <p>Corporate IT Training • IT Services • Tech Debt Resolution • Resource Outsourcing</p>
-    <a href="#contact" class="btn">Contact Us</a>
+    <div class="hero-content">
+      <h1>Delta Tech AI</h1>
+      <p>
+        Empowering organizations with skilled talent, robust systems,
+        and future-ready technology solutions.
+      </p>
+      <div class="hero-actions">
+        <a href="#services" class="btn primary">Our Services</a>
+        <a href="#contact" class="btn outline">Contact Us</a>
+      </div>
+    </div>
   </header>
 
-  <section class="section">
-    <h2>About Delta Tech AI</h2>
-    <p>
-      Delta Tech AI is a technology-driven company focused on corporate IT training,
-      software services, tech debt resolution, and outsourcing trained IT professionals.
-      We help organizations scale efficiently by delivering skilled teams and reliable
-      technology solutions aligned with business goals.
+  <!-- ABOUT -->
+  <section class="section about">
+    <h2>Who We Are</h2>
+    <p class="section-desc">
+      Delta Tech AI is a technology-focused organization delivering corporate IT training,
+      scalable software services, tech debt resolution, and outsourcing of trained IT professionals.
+      We partner with companies to solve real engineering and workforce challenges.
     </p>
   </section>
 
-  <section class="section gray">
-    <h2>Our Services</h2>
+  <!-- SERVICES -->
+  <section class="section gray" id="services">
+    <h2>What We Do</h2>
 
     <div class="cards">
       <div class="card">
+        <span class="icon">🎓</span>
         <h3>Corporate IT Training</h3>
-        <p>Industry-ready training programs for freshers and working professionals.</p>
+        <p>
+          Role-based, industry-aligned training programs for freshers
+          and working professionals.
+        </p>
       </div>
 
       <div class="card">
+        <span class="icon">💻</span>
         <h3>IT Services</h3>
-        <p>Web applications, backend systems, cloud deployments, and integrations.</p>
+        <p>
+          Web applications, backend systems, cloud deployments,
+          integrations, and APIs.
+        </p>
       </div>
 
       <div class="card">
+        <span class="icon">🛠️</span>
         <h3>Tech Debt Resolution</h3>
-        <p>Legacy code cleanup, refactoring, performance optimization, and modernization.</p>
+        <p>
+          Legacy code cleanup, refactoring, performance optimization,
+          and architecture modernization.
+        </p>
       </div>
 
       <div class="card">
+        <span class="icon">👥</span>
         <h3>Resource Outsourcing</h3>
-        <p>Deployment of trained IT resources based on project and skill requirements.</p>
+        <p>
+          Deployment of trained and job-ready IT professionals
+          tailored to your project needs.
+        </p>
       </div>
     </div>
   </section>
 
-  <section class="section" id="contact">
-    <h2>Contact Us</h2>
+  <!-- WHY US -->
+  <section class="section">
+    <h2>Why Delta Tech AI</h2>
+
+    <div class="why-grid">
+      <div>✔ Industry-relevant training</div>
+      <div>✔ Strong engineering fundamentals</div>
+      <div>✔ Business-aligned delivery</div>
+      <div>✔ Flexible engagement models</div>
+      <div>✔ Cost-effective scaling</div>
+      <div>✔ Long-term partnership mindset</div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="section contact" id="contact">
+    <h2>Let’s Work Together</h2>
 
     <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <textarea name="message" rows="5" placeholder="Tell us about your requirement" required></textarea>
       <button type="submit">Send Message</button>
     </form>
 
     <p class="contact-note">
-      We usually respond within 1 business day.
+      We respond within 1 business day.
     </p>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <p>© 2026 Delta Tech AI. All rights reserved.</p>
   </footer>
