--- a/index.html
+++ b/index.html
@@ -13,89 +13,91 @@
 
   <!-- HERO -->
   <header class="hero">
-    <div class="hero-content">
+    <div class="glass">
+      <span class="tag">Technology • Training • Talent</span>
       <h1>Delta Tech AI</h1>
       <p>
-        Empowering organizations with skilled talent, robust systems,
-        and future-ready technology solutions.
+        We help organizations build skilled engineering teams,
+        modernize systems, and scale delivery with confidence.
       </p>
+
       <div class="hero-actions">
-        <a href="#services" class="btn primary">Our Services</a>
-        <a href="#contact" class="btn outline">Contact Us</a>
+        <a href="#services" class="btn primary">Explore Services</a>
+        <a href="#contact" class="btn secondary">Get in Touch</a>
       </div>
     </div>
   </header>
 
   <!-- ABOUT -->
-  <section class="section about">
-    <h2>Who We Are</h2>
+  <section class="section">
+    <h2>What We Do</h2>
     <p class="section-desc">
-      Delta Tech AI is a technology-focused organization delivering corporate IT training,
-      scalable software services, tech debt resolution, and outsourcing of trained IT professionals.
-      We partner with companies to solve real engineering and workforce challenges.
+      Delta Tech AI partners with businesses to deliver corporate IT training,
+      resolve technical debt, build reliable systems, and outsource trained
+      IT professionals aligned to real-world requirements.
     </p>
   </section>
 
   <!-- SERVICES -->
-  <section class="section gray" id="services">
-    <h2>What We Do</h2>
+  <section class="section soft-bg" id="services">
+    <h2>Our Core Offerings</h2>
 
     <div class="cards">
       <div class="card">
-        <span class="icon">🎓</span>
+        <div class="icon-circle">🎓</div>
         <h3>Corporate IT Training</h3>
         <p>
-          Role-based, industry-aligned training programs for freshers
-          and working professionals.
+          Structured training programs designed around
+          modern tech stacks and enterprise expectations.
         </p>
       </div>
 
       <div class="card">
-        <span class="icon">💻</span>
+        <div class="icon-circle">🧠</div>
         <h3>IT Services</h3>
         <p>
-          Web applications, backend systems, cloud deployments,
-          integrations, and APIs.
+          End-to-end development of scalable applications,
+          APIs, and cloud-ready systems.
         </p>
       </div>
 
       <div class="card">
-        <span class="icon">🛠️</span>
+        <div class="icon-circle">🔧</div>
         <h3>Tech Debt Resolution</h3>
         <p>
-          Legacy code cleanup, refactoring, performance optimization,
-          and architecture modernization.
+          Refactoring, optimization, and modernization
+          of legacy and underperforming systems.
         </p>
       </div>
 
       <div class="card">
-        <span class="icon">👥</span>
+        <div class="icon-circle">👥</div>
         <h3>Resource Outsourcing</h3>
         <p>
-          Deployment of trained and job-ready IT professionals
-          tailored to your project needs.
+          Trained engineers deployed based on your
+          skill, timeline, and delivery needs.
         </p>
       </div>
     </div>
   </section>
 
-  <!-- WHY US -->
+  <!-- TRUST -->
   <section class="section">
-    <h2>Why Delta Tech AI</h2>
+    <h2>Why Companies Work With Us</h2>
 
-    <div class="why-grid">
-      <div>✔ Industry-relevant training</div>
-      <div>✔ Strong engineering fundamentals</div>
-      <div>✔ Business-aligned delivery</div>
-      <div>✔ Flexible engagement models</div>
-      <div>✔ Cost-effective scaling</div>
-      <div>✔ Long-term partnership mindset</div>
+    <div class="trust-grid">
+      <div>Real-world training, not theory</div>
+      <div>Engineering-first mindset</div>
+      <div>Business-aligned delivery</div>
+      <div>Flexible engagement models</div>
+      <div>Strong quality standards</div>
+      <div>Long-term partnership approach</div>
     </div>
   </section>
 
   <!-- CONTACT -->
   <section class="section contact" id="contact">
-    <h2>Let’s Work Together</h2>
+    <h2>Start a Conversation</h2>
 
     <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -105,7 +107,7 @@
     </form>
 
     <p class="contact-note">
-      We respond within 1 business day.
+      We typically respond within 1 business day.
     </p>
   </section>
 
